--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -27,8 +27,8 @@
 </p><p>&#1052;&#1085;&#1086;&#1075;&#1086; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1090; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1080; &#1086;&#1090; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1091;&#1074;&#1072;&#1097; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1042; &#1090;&#1086;&#1079;&#1080; &#1089;&#1083;&#1091;&#1095;&#1072;&#1081; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103;&#1090; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1090;&#1072;&#1079;&#1080; &#1074;&#1088;&#1098;&#1079;&#1082;&#1072;, &#1082;&#1072;&#1090;&#1086; &#1072;&#1073;&#1089;&#1086;&#1088;&#1073;&#1080;&#1088;&#1072; &#1087;&#1086;-&#1089;&#1090;&#1072;&#1088;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074;&#1098;&#1090;&#1088;&#1077; &#1074; &#1085;&#1086;&#1074;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1056;&#1072;&#1079;&#1075;&#1098;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1080; &#1087;&#1088;&#1080;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1074; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1072;&#1090;&#1072; &#1080;&#1089;&#1090;&#1086;&#1088;&#1080;&#1103; &#1085;&#1072; &#1090;&#1086;&#1079;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1054;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1087;&#1086;-&#1076;&#1098;&#1083;&#1073;&#1086;&#1082;&#1080; &#1074;&#1098;&#1090;&#1088;&#1077; &#1074; &#1076;&#1088;&#1091;&#1075;&#1080;&#1090;&#1077;, &#1089;&#1072; &#1087;&#1086;-&#1089;&#1090;&#1072;&#1088;&#1080;, &#1076;&#1086;&#1082;&#1072;&#1090;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1085;&#1072;&#1074;&#1098;&#1085;, &#1089;&#1072; &#1087;&#1086;-&#1085;&#1086;&#1074;&#1080; &#1080; &#1087;&#1088;&#1086;&#1080;&#1079;&#1083;&#1080;&#1079;&#1072;&#1090; &#1086;&#1090; &#1087;&#1086;-&#1089;&#1090;&#1072;&#1088;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;. &#1063;&#1088;&#1077;&#1079; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1085;&#1098;&#1090;&#1088;&#1077;&#1096;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080; &#1089;&#1077; &#1088;&#1072;&#1079;&#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1103;&#1074;&#1072;&#1090; &#1095;&#1072;&#1082; &#1076;&#1086; &#1074;&#1098;&#1088;&#1093;&#1072;, &#1075;&#1077;&#1085;&#1077;&#1088;&#1080;&#1088;&#1072;&#1081;&#1082;&#1080; &#1085;&#1086;&#1074; &#1088;&#1077;&#1079;&#1091;&#1083;&#1090;&#1072;&#1090;.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_parametric_history.png&amp;filetimestamp=20240720173407&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_parametric_history.png" decoding="async" width="298" height="230" class="mw-file-element" data-file-width="298" data-file-height="230"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The topmost object is created by doing parametric operations on objects which themselves were created by previous operations.<br>
-Fully expanding the tree reveals the original elements that were used to create the partial solids.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&#1053;&#1072;&#1081;-&#1075;&#1086;&#1088;&#1085;&#1080;&#1103;&#1090; &#1086;&#1073;&#1077;&#1082;&#1090; &#1089;&#1077; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072; &#1095;&#1088;&#1077;&#1079; &#1080;&#1079;&#1074;&#1098;&#1088;&#1096;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1080; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072;&#1084;&#1080; &#1087;&#1086; &#1089;&#1077;&#1073;&#1077; &#1089;&#1080; &#1089;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1086;&#1090; &#1087;&#1088;&#1077;&#1076;&#1080;&#1096;&#1085;&#1080; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;.<br>
+&#1055;&#1098;&#1083;&#1085;&#1086;&#1090;&#1086; &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;&#1090;&#1086; &#1088;&#1072;&#1079;&#1082;&#1088;&#1080;&#1074;&#1072; &#1086;&#1088;&#1080;&#1075;&#1080;&#1085;&#1072;&#1083;&#1085;&#1080;&#1090;&#1077; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1073;&#1080;&#1083;&#1080; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1080; &#1079;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1095;&#1072;&#1089;&#1090;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1090;&#1074;&#1098;&#1088;&#1076;&#1080; &#1090;&#1077;&#1083;&#1072;.</p>
 <h3><span class="mw-headline" id="Tree_View_columns">Tree View columns</span></h3>
 <p>The Tree View always displays a column with the icons and labels of objects. Two additional columns can optionally be displayed as well. To enable these columns right-click the Tree View and in the context menu select <b>Tree Settings</b> and then <b>Show Description</b> (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>) and/or <b>Show Internal Name</b> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). Column headings are added if more than one column is displayed. Note that the internal names of objects cannot be changed.
 </p>
@@ -155,15 +155,15 @@ Fully expanding the tree reveals the original elements that were used to create 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117204148
+Cached time: 20260117204315
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.121 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.149 seconds
+Real time usage: 0.224 seconds
 Preprocessor visited node count: 747/1000000
-Post&#8208;expand include size: 37949/2097152 bytes
-Template argument size: 12168/2097152 bytes
+Post&#8208;expand include size: 38475/2097152 bytes
+Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -171,19 +171,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.542      1 -total
- 24.24%    8.372      1 Template:Std_Base_navi/bg
- 21.38%    7.385      3 Template:Navigation_menu_2
- 17.72%    6.121      1 Template:Interface_navi/bg
- 13.41%    4.632      1 Template:Userdocnavi/bg
-  8.26%    2.852      2 Template:PropertyData
-  5.93%    2.047      1 Template:PropertyView
-  5.52%    1.907      3 Template:Variable
-  4.87%    1.682      2 Template:Caption
-  4.41%    1.525     19 Template:KEY
+100.00%   46.070      1 -total
+ 26.34%   12.136      1 Template:Std_Base_navi/bg
+ 24.41%   11.245      3 Template:Navigation_menu_2
+ 13.84%    6.376      1 Template:Interface_navi/bg
+ 11.64%    5.363      1 Template:Userdocnavi/bg
+ 10.55%    4.860      1 Template:FALSE
+  6.55%    3.019      2 Template:PropertyData
+  5.20%    2.394      1 Template:PropertyView
+  4.58%    2.112      2 Template:Caption
+  4.14%    1.905      6 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117204148 and revision id 1739671. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117204314 and revision id 1739673. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
