--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -29,7 +29,9 @@
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&#1053;&#1072;&#1081;-&#1075;&#1086;&#1088;&#1085;&#1080;&#1103;&#1090; &#1086;&#1073;&#1077;&#1082;&#1090; &#1089;&#1077; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072; &#1095;&#1088;&#1077;&#1079; &#1080;&#1079;&#1074;&#1098;&#1088;&#1096;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1080; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072;&#1084;&#1080; &#1087;&#1086; &#1089;&#1077;&#1073;&#1077; &#1089;&#1080; &#1089;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1086;&#1090; &#1087;&#1088;&#1077;&#1076;&#1080;&#1096;&#1085;&#1080; &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;.<br>
 &#1055;&#1098;&#1083;&#1085;&#1086;&#1090;&#1086; &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1076;&#1098;&#1088;&#1074;&#1086;&#1090;&#1086; &#1088;&#1072;&#1079;&#1082;&#1088;&#1080;&#1074;&#1072; &#1086;&#1088;&#1080;&#1075;&#1080;&#1085;&#1072;&#1083;&#1085;&#1080;&#1090;&#1077; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1073;&#1080;&#1083;&#1080; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1080; &#1079;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1095;&#1072;&#1089;&#1090;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1090;&#1074;&#1098;&#1088;&#1076;&#1080; &#1090;&#1077;&#1083;&#1072;.</p>
-<h3><span class="mw-headline" id="Tree_View_columns">Tree View columns</span></h3>
+<p><span id="Tree_View_columns"></span>
+</p>
+<h3><span id=".D0.9A.D0.BE.D0.BB.D0.BE.D0.BD.D0.B8_.D0.B2_.D0.B4.D1.8A.D1.80.D0.B2.D0.BE.D0.B2.D0.B8.D0.B4.D0.BD.D0.B8.D1.8F_.D0.B8.D0.B7.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1050;&#1086;&#1083;&#1086;&#1085;&#1080;_&#1074;_&#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103;_&#1080;&#1079;&#1075;&#1083;&#1077;&#1076;">&#1050;&#1086;&#1083;&#1086;&#1085;&#1080; &#1074; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</span></h3>
 <p>The Tree View always displays a column with the icons and labels of objects. Two additional columns can optionally be displayed as well. To enable these columns right-click the Tree View and in the context menu select <b>Tree Settings</b> and then <b>Show Description</b> (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>) and/or <b>Show Internal Name</b> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). Column headings are added if more than one column is displayed. Note that the internal names of objects cannot be changed.
 </p>
 <h3><span class="mw-headline" id="Edit_object_label">Edit object label</span></h3>
@@ -155,13 +157,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117204315
+Cached time: 20260117204341
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.149 seconds
-Real time usage: 0.224 seconds
-Preprocessor visited node count: 747/1000000
+CPU time usage: 0.117 seconds
+Real time usage: 0.170 seconds
+Preprocessor visited node count: 748/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -171,19 +173,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.070      1 -total
- 26.34%   12.136      1 Template:Std_Base_navi/bg
- 24.41%   11.245      3 Template:Navigation_menu_2
- 13.84%    6.376      1 Template:Interface_navi/bg
- 11.64%    5.363      1 Template:Userdocnavi/bg
- 10.55%    4.860      1 Template:FALSE
-  6.55%    3.019      2 Template:PropertyData
-  5.20%    2.394      1 Template:PropertyView
-  4.58%    2.112      2 Template:Caption
-  4.14%    1.905      6 Template:MenuCommand
+100.00%   42.288      1 -total
+ 18.32%    7.745      1 Template:Std_Base_navi/bg
+ 18.01%    7.617      3 Template:Navigation_menu_2
+ 11.90%    5.033      1 Template:Userdocnavi/bg
+ 11.14%    4.712      1 Template:Interface_navi/bg
+ 10.82%    4.574      2 Template:PropertyData
+  9.16%    3.873      5 Template:Version
+  8.10%    3.424     19 Template:KEY
+  6.88%    2.909      2 Template:Caption
+  6.71%    2.838      3 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117204314 and revision id 1739673. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117204341 and revision id 1739675. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
