--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -63,8 +63,9 @@
 <h3><span id=".3Cdescription.3E"></span><span class="mw-headline" id="&lt;description&gt;">&lt;description&gt;</span></h3>
 <p>REQUIRED
 </p><p>A concise (up to several sentences) text-only description of this package. No markup is supported.
-</p><p>=== &lt;maintainer&gt;
-</p><p>AT LEAST ONE REQUIRED (multiple allowed)
+</p>
+<h3><span id=".3Cmaintainer.3E"></span><span class="mw-headline" id="&lt;maintainer&gt;">&lt;maintainer&gt;</span></h3>
+<p>AT LEAST ONE REQUIRED (multiple allowed)
 </p><p>The name of the person maintaining the package. All packages require a maintainer. For orphaned packages see below.
 </p>
 <h4><span class="mw-headline" id="Attributes_2">Attributes</span></h4>
@@ -358,13 +359,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117092835
+Cached time: 20260117211914
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.090 seconds
-Preprocessor visited node count: 630/1000000
+CPU time usage: 0.111 seconds
+Real time usage: 0.198 seconds
+Preprocessor visited node count: 632/1000000
 Post&#8208;expand include size: 7120/2097152 bytes
 Template argument size: 2535/2097152 bytes
 Highest expansion depth: 5/100
@@ -374,17 +375,17 @@ Unstrip post&#8208;expand size: 8585/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.591      1 -total
- 26.44%    3.858      1 Template:Powerdocnavi
- 16.10%    2.350      1 Template:Navigation_menu_2
- 15.10%    2.203     38 Template:Incode
- 10.77%    1.572      1 Template:Code
-  9.55%    1.393      1 Template:MenuCommand
-  8.64%    1.261      3 Template:Version
-  7.64%    1.114      1 Template:TOCright
+100.00%   16.309      1 -total
+ 25.75%    4.200      1 Template:Powerdocnavi
+ 17.02%    2.776      1 Template:Navigation_menu_2
+ 15.91%    2.595     38 Template:Incode
+  9.79%    1.597      1 Template:TOCright
+  9.50%    1.549      1 Template:Code
+  8.57%    1.397      3 Template:Version
+  8.55%    1.395      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117092846 and revision id 1739391. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117211917 and revision id 1739676. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
