--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -7,7 +7,7 @@
 <li><a href="ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (39% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
-<p>Beginning in FreeCAD <code>v0.20</code> addons should be distributed with a manifest file describing their contents. FreeCAD uses this metadata to determine what resources to load and what dependencies to install upon other things. It also provides information used to display your addon in the Addon Manager.
+<p>Beginning in FreeCAD v0.20 addons should be distributed with a manifest file describing their contents. FreeCAD uses this metadata to determine what resources to load and what dependencies to install upon other things. It also provides information used to display your addon in the Addon Manager.
 </p>
 <h2><span class="mw-headline" id="Overall_file_format">Overall file format</span></h2>
 <p>This document currently describes file format version 1.
@@ -359,12 +359,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117211914
+Cached time: 20260117212028
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.198 seconds
+CPU time usage: 0.073 seconds
+Real time usage: 0.081 seconds
 Preprocessor visited node count: 632/1000000
 Post&#8208;expand include size: 7120/2097152 bytes
 Template argument size: 2535/2097152 bytes
@@ -375,17 +375,17 @@ Unstrip post&#8208;expand size: 8585/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.309      1 -total
- 25.75%    4.200      1 Template:Powerdocnavi
- 17.02%    2.776      1 Template:Navigation_menu_2
- 15.91%    2.595     38 Template:Incode
-  9.79%    1.597      1 Template:TOCright
-  9.50%    1.549      1 Template:Code
-  8.57%    1.397      3 Template:Version
-  8.55%    1.395      1 Template:MenuCommand
+100.00%   10.940      1 -total
+ 24.70%    2.702      1 Template:Powerdocnavi
+ 16.65%    1.822     38 Template:Incode
+ 14.93%    1.633      1 Template:Navigation_menu_2
+ 11.24%    1.230      1 Template:Code
+  8.71%    0.953      3 Template:Version
+  7.94%    0.869      1 Template:MenuCommand
+  7.92%    0.867      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117211917 and revision id 1739676. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117212100 and revision id 1739677. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
