--- a/wiki/PartDesign_SubtractivePipe.html
+++ b/wiki/PartDesign_SubtractivePipe.html
@@ -1,11 +1,11 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">PartDesign SubtractivePipe</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-PartDesign+SubtractivePipe&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Subtraktives Rohr (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--high" title="PartDesign Subtraktives Rohr (94% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="tr/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign SubtractivePipe/tr (6% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="es/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--med" title="PartDesign Barrido sustractivo (56% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Balayage soustractif (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="fr/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--high" title="PartDesign Balayage soustractif (94% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--med" title="PartDesign: Sweep sottrattivo (62% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--complete" title="Projekt Cz&#281;&#347;ci: Odejmowanie wyci&#261;gni&#281;ciem wzd&#322;u&#380; &#347;cie&#380;ki (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="pl/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--high" title="Projekt Cz&#281;&#347;ci: Odejmowanie wyci&#261;gni&#281;ciem wzd&#322;u&#380; &#347;cie&#380;ki (94% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--low" title="Escaneamento subtrativo (6% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ro/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--med" title="PartDesign &#538;eava Subtractiv&#259; (25% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="ru/PartDesign_SubtractivePipe.html" class="mw-pt-progress mw-pt-progress--med" title="PartDesign &#1057;&#1091;&#1073;&#1090;&#1088;&#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1099;&#1081; &#1087;&#1088;&#1086;&#1092;&#1080;&#1083;&#1100; &#1087;&#1086; &#1090;&#1088;&#1072;&#1077;&#1082;&#1090;&#1086;&#1088;&#1080;&#1080; (56% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
@@ -159,35 +159,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117220809
+Cached time: 20260117220857
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.138 seconds
+CPU time usage: 0.095 seconds
+Real time usage: 0.111 seconds
 Preprocessor visited node count: 900/1000000
 Post&#8208;expand include size: 20128/2097152 bytes
 Template argument size: 6259/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2276/5000000 bytes
+Unstrip post&#8208;expand size: 2261/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.077      1 -total
- 25.49%    5.373     10 Template:PropertyData
- 22.03%    4.643      1 Template:PartDesign_Tools_navi
- 17.29%    3.645     10 Template:Variable
- 16.22%    3.418      2 Template:Navigation_menu_2
- 10.35%    2.182      1 Template:Userdocnavi
-  8.60%    1.813      1 Template:GuiCommand
-  8.45%    1.780      2 Template:Docnav
-  7.56%    1.594      5 Template:Emphasis
-  6.51%    1.372      6 Template:Button
+100.00%   21.352      1 -total
+ 23.33%    4.981      1 Template:GuiCommand
+ 22.31%    4.764     10 Template:PropertyData
+ 16.40%    3.501      1 Template:PartDesign_Tools_navi
+ 15.97%    3.410     10 Template:Variable
+ 15.11%    3.227      2 Template:Navigation_menu_2
+  9.55%    2.039      1 Template:Userdocnavi
+  7.63%    1.630      2 Template:Docnav
+  6.76%    1.443      6 Template:Button
+  3.74%    0.799      5 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:81692-0!canonical and timestamp 20260117220815 and revision id 1739739. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:81692-0!canonical and timestamp 20260117220857 and revision id 1739739. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
