--- a/wiki/it/App_DocumentObject.html
+++ b/wiki/it/App_DocumentObject.html
@@ -85,12 +85,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114125326
+Cached time: 20260118040007
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.107 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.120 seconds
 Preprocessor visited node count: 374/1000000
 Post&#8208;expand include size: 13914/2097152 bytes
 Template argument size: 3690/2097152 bytes
@@ -101,19 +101,19 @@ Unstrip post&#8208;expand size: 2323/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.383      1 -total
- 20.39%    7.010      1 Template:Userdocnavi/it
- 19.79%    6.805      4 Template:PropertyData
- 19.62%    6.746      1 Template:Document_objects_navi/it
- 11.06%    3.803      1 Template:TitleProperty
- 11.03%    3.794      2 Template:Navigation_menu_2
-  9.74%    3.349      4 Template:Variable
-  8.20%    2.821      2 Template:Caption
-  4.98%    1.714      1 Template:Emphasis
-  4.91%    1.688      1 Template:Code
+100.00%   27.633      1 -total
+ 20.78%    5.742      1 Template:Document_objects_navi/it
+ 15.33%    4.237      1 Template:Userdocnavi/it
+ 15.31%    4.232      4 Template:PropertyData
+ 12.66%    3.498      1 Template:Emphasis
+  9.68%    2.675      4 Template:Variable
+  8.73%    2.413      2 Template:Navigation_menu_2
+  7.41%    2.048      1 Template:TitleProperty
+  7.16%    1.978      1 Template:Code
+  6.85%    1.894      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:172813-0!canonical and timestamp 20260114125326 and revision id 1738157. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:172813-0!canonical and timestamp 20260118040007 and revision id 1738157. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
