--- a/wiki/it/Basic_Sketcher_Tutorial.html
+++ b/wiki/it/Basic_Sketcher_Tutorial.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Grundlegendes Tutorial zum Sketcher (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Basic_Sketcher_Tutorial.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Basic Sketcher Tutorial (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Tutorial B&aacute;sico Croquizador (70% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Tutoriel d'introduction (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Tutoriel d'introduction (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Poradnik: Podstawy dla &#347;rodowiska pracy Szkicownik (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial do esbo&ccedil;o (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
@@ -297,35 +297,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112110138
+Cached time: 20260118040011
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.153 seconds
-Real time usage: 0.245 seconds
+CPU time usage: 0.165 seconds
+Real time usage: 0.191 seconds
 Preprocessor visited node count: 905/1000000
 Post&#8208;expand include size: 42664/2097152 bytes
 Template argument size: 11678/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2583/5000000 bytes
+Unstrip post&#8208;expand size: 2588/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.631      1 -total
- 26.48%   10.230      1 Template:Sketcher_Tools_navi/it
- 15.64%    6.041      2 Template:Navigation_menu_2
- 14.55%    5.619      1 Template:Userdocnavi/it
- 13.41%    5.179      9 Template:Value
-  7.93%    3.062     11 Template:Caption
-  7.32%    2.829      1 Template:TutorialInfo/it
-  6.83%    2.640      9 Template:Incode
-  5.82%    2.248      9 Template:MenuCommand
-  5.05%    1.952     26 Template:Button
+100.00%   28.301      1 -total
+ 23.20%    6.567      1 Template:Sketcher_Tools_navi/it
+ 14.57%    4.123      2 Template:Navigation_menu_2
+ 13.64%    3.861      9 Template:Value
+ 10.01%    2.833      1 Template:Userdocnavi/it
+  9.00%    2.548      1 Template:TutorialInfo/it
+  6.85%    1.938     26 Template:Button
+  6.23%    1.764      5 Template:KEY
+  6.15%    1.741     11 Template:Caption
+  5.85%    1.657      9 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61447-0!canonical and timestamp 20260112110137 and revision id 1737401. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61447-0!canonical and timestamp 20260118040011 and revision id 1737401. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
