--- a/wiki/it/Cables_Create_Custom_Connector.html
+++ b/wiki/it/Cables_Create_Custom_Connector.html
@@ -403,12 +403,12 @@ Pin002,Terminal,Terminal,0.0,-1.5,12.0,0.0,0.0,90.0,1,6.0,1.0
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260114230815
+Cached time: 20260118040014
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.111 seconds
+CPU time usage: 0.113 seconds
+Real time usage: 0.133 seconds
 Preprocessor visited node count: 707/1000000
 Post&#8208;expand include size: 13273/2097152 bytes
 Template argument size: 4562/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 5463/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.397      1 -total
- 24.08%    7.319      1 Template:Userdocnavi/it
- 21.80%    6.628     16 Template:Code
- 11.98%    3.641      1 Template:TutorialInfo
- 11.78%    3.581      1 Template:Navigation_menu_2
- 10.03%    3.049      9 Template:Incode
-  7.13%    2.169     18 Template:FileName
-  6.57%    1.997      3 Template:Caption
-  5.49%    1.670      1 Template:Button
-  1.80%    0.548     10 =
+100.00%   26.049      1 -total
+ 25.25%    6.576     16 Template:Code
+ 21.96%    5.721      1 Template:Userdocnavi/it
+ 10.59%    2.759      9 Template:Incode
+  9.59%    2.499      1 Template:Navigation_menu_2
+  9.42%    2.453      1 Template:TutorialInfo
+  8.94%    2.328     18 Template:FileName
+  6.12%    1.595      3 Template:Caption
+  5.35%    1.393      1 Template:Button
+  2.82%    0.734     10 =
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409856-0!canonical and timestamp 20260114230815 and revision id 1738517. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409856-0!canonical and timestamp 20260118040014 and revision id 1738517. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
