--- a/wiki/it/Cables_WireFlex.html
+++ b/wiki/it/Cables_WireFlex.html
@@ -246,12 +246,12 @@ When in <b>Draft Edit</b> mode DO NOT use "Add point" and "Delete point" from co
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260113150912
+Cached time: 20260118040017
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.197 seconds
+CPU time usage: 0.150 seconds
+Real time usage: 0.177 seconds
 Preprocessor visited node count: 1242/1000000
 Post&#8208;expand include size: 17546/2097152 bytes
 Template argument size: 4196/2097152 bytes
@@ -262,19 +262,19 @@ Unstrip post&#8208;expand size: 1163/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.249      1 -total
- 47.02%   19.395     16 Template:PropertyData
- 34.76%   14.339     16 Template:Variable
- 12.27%    5.062      3 Template:TitleProperty
-  9.90%    4.086     32 Template:Incode
-  8.99%    3.709     16 Template:Value
-  8.13%    3.355      2 Template:Docnav/it
-  7.73%    3.187      1 Template:GuiCommand
-  5.02%    2.071      5 Template:Caption
-  2.78%    1.148      1 Template:Button
+100.00%   32.214      1 -total
+ 30.75%    9.907     16 Template:PropertyData
+ 23.74%    7.648     16 Template:Variable
+ 13.34%    4.298      1 Template:GuiCommand
+ 11.22%    3.615      2 Template:Docnav/it
+ 11.11%    3.580      3 Template:TitleProperty
+  9.52%    3.067     16 Template:Value
+  7.47%    2.407      5 Template:Caption
+  6.66%    2.145     32 Template:Incode
+  4.34%    1.397      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:408361-0!canonical and timestamp 20260113150911 and revision id 1737867. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:408361-0!canonical and timestamp 20260118040017 and revision id 1737867. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
