--- a/wiki/it/Datum.html
+++ b/wiki/it/Datum.html
@@ -66,12 +66,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116164210
+Cached time: 20260118040020
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.054 seconds
-Real time usage: 0.090 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.123 seconds
 Preprocessor visited node count: 142/1000000
 Post&#8208;expand include size: 11679/2097152 bytes
 Template argument size: 3251/2097152 bytes
@@ -82,16 +82,16 @@ Unstrip post&#8208;expand size: 1531/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.388      1 -total
- 33.11%    4.764      1 Template:Userdocnavi/it
- 32.26%    4.641      1 Template:Document_objects_navi/it
- 17.20%    2.475      2 Template:Navigation_menu_2
- 11.32%    1.629      1 Template:Incode
- 10.70%    1.539      5 Template:Button
-  8.13%    1.170      1 Template:KEY
+100.00%   16.847      1 -total
+ 42.17%    7.104      1 Template:Userdocnavi/it
+ 29.30%    4.936      2 Template:Navigation_menu_2
+ 23.28%    3.922      1 Template:Document_objects_navi/it
+ 12.39%    2.087      5 Template:Button
+ 10.97%    1.848      1 Template:Incode
+  6.63%    1.117      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:190735-0!canonical and timestamp 20260116164209 and revision id 1739107. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:190735-0!canonical and timestamp 20260118040020 and revision id 1739107. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
